# TOMLDecoder

./: .bazelrc  .editorconfig  .gitignore  .spi.yml  .swiftformat  .travis.yml  BUILD.bazel  CHANGELOG.md  MODULE.bazel  Makefile  Package.resolved  Package.swift  Package@swift-6.0.swift  README.md  TODO.md  TOMLDecoder.podspec  flake.nix  metadata.json  project.yml
.build/: build.db  debug.yaml
.build/arm64-apple-macosx/debug/: description.json
.build/symbol-graphs/: TOMLDecoder.symbols.json  TOMLDecoder@Swift.symbols.json
.github/workflows/: amazon-linux-2.yml  bazel.yml  benchmark-delta.yml  benchmark-pr.yml  build-embeded.yml  build-wasm.yml  centos-8.yml  ci.yml  codegen.yml  continuous-integration.yml  deploy-docs.yml  macos-11.15.yml  macos.yml  release.yml  swift.yml  swiftformat.yml  ubuntu-bionic.yml  ubuntu-focal.yml  windows.yml
0.4.x/data/documentation/: tomldecoder.json
Benchmarks/: Package.resolved  Package.swift  README.md
Benchmarks/Sources/Benchmarks/: main.swift
Benchmarks/TOMLDecoderBenchmarks/: Benchmarks.swift
Benchmarks/Tests/: LinuxMain.swift
Benchmarks/Tests/BenchmarksTests/: BenchmarksTests.swift  XCTestManifests.swift
Decoder.playground/: Contents.swift
Docs/index/: index.json
Documentation/: AboutJSONDecoder.md  Introduction.md  RELEASING.md
Resources/: Info.plist
Resources/xcconfigs/: TOMLDecoder_Debug.xcconfig  TOMLDecoder_Release.xcconfig  UniversalFramework_Base.xcconfig  UniversalFramework_Framework.xcconfig
Scripts/: Dockerfile-testing-linux  benchmark.sh  benchmark_report.sh  benchmark_run.sh  deploy-docs.sh  develop-linux-docker.sh  ensure-simulator.sh  ensure-xcodegen.sh  fetch-dependencies.py  format.sh  generate-code.sh  generate-docs.sh  generate-tests.py  run-tests-linux-docker.sh  set-up-wasm-ubuntu.sh  test-generate.sh
Sources/Deserializer/: DeserializationError.swift  Parser.swift  TOMLDeserializer.swift  Traced.swift
Sources/Deserializer2/: main.swift
Sources/ProlepticGregorianTestHelpers/: DateRef.cpp
Sources/ProlepticGregorianTestHelpers/include/: DateRef.h  module.modulemap
Sources/Resources/: Canada.swift  Pokedex.swift  Resources.swift  Twitter.swift
Sources/Resources/fixtures/: pokedex.toml  twitter.toml
Sources/TOMLDecoder/: DateTime.swift  KeyDecodingStrategy.swift  Parser.swift  ParserImplementation.Generated.swift  ParserImplementation.swift  Parsing.swift  TOMLArray.swift  TOMLDecoder.swift  TOMLDecoderImpl.swift  TOMLDecodingStorage.swift  TOMLDeserializer.swift  TOMLError.swift  TOMLKey.swift  TOMLKeyedDecodingContainer.Generated.swift  TOMLKeyedDecodingContainer.swift  TOMLSingleValueDecodingContainer.Generated.swift  TOMLTable.swift  TOMLUnkeyedDecodingContainer.Generated.swift  TOMLUnkeyedDecodingContainer.swift  Token.swift  _TOMLDecoder.swift
Sources/TOMLDecoder/Decoding/: DecodingError+Extensions.swift  KeyDecodingStrategy.swift  TOMLDecoder.swift  TOMLDecoderImpl.swift  TOMLDecodingStorage.swift  TOMLKey.swift  TOMLUnkeyedDecodingContainer.swift
Sources/TOMLDecoder/Parsing/: Constants.swift  Parser+Finish.swift  Parser.swift  TOMLDocument.swift  Token.swift
Sources/TOMLDecoder/TOMLDecoder.docc/: CHANGELOG.md  DecodingTOML.md  DeserializingTOML.md  DevelopingTOMLDecoder.md  GettingStarted.md  TOMLDecoder.md  VersionedDocs.md
Sources/TOMLDecoder/gyb/: ParserImplementation.swift.gyb  TOMLKeyedDecodingContainer.swift.gyb  TOMLSingleValueDecodingContainer.swift.gyb  TOMLUnkeyedDecodingContainer.swift.gyb
Sources/TOMLDeserializer/: Date+Extensions.swift  DateComponents+Extensions.swift  Parser.swift  TOMLDeserializer.swift  Traced.swift
Sources/compliance/: main.swift
TOMLDecoder.docc/: CHANGELOG.md  DecodingTOML.md  DeserializingTOML.md  DevelopingTOMLDecoder.md  GettingStarted.md  TOMLDecoder.md  VersionedDocs.md
TOMLDecoder.xcodeproj/: project.pbxproj
TOMLDecoder.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
TOMLDecoder.xcodeproj/xcshareddata/xcschemes/: TOMLDecoder.xcscheme
TOMLDecoder.xcworkspace/: contents.xcworkspacedata
Tests/: LinuxMain.swift
Tests/DeserializerTests/: ErrorTests.swift  ParserTests.swift  TOMLDeserializerTests.swift  TOMLInvalidationTests.swift
Tests/DeserializerTests/invalid_fixtures/: bare-cr.toml
Tests/DeserializerTests/valid_fixtures/: comments-everywhere.json  dotted-keys.json  escape-tricky.json  integer-underscore.json  table-array-many.json
Tests/TOMLDecoderTests/: ArrayTypeConversionTests.swift  DateStrategyTests.swift  DateTimeDescriptionTests.swift  DateTimeExactMatchTests.swift  ErrorTests.swift  InvalidationTests.Generated.swift  LeafValueDecodingTests.Generated.swift  ParserTests.swift  StandardLibraryExtensionTests.swift  TOMLDecoderTests.swift  TOMLDeserializerTests.swift  TOMLInvalidationTests.swift  TOMLInvalidationTests_.swift  TOMLTableKeyMembershipTests.swift  TOMLValidationTests.swift  TableTypeConversionTests.swift  ValidationTests.Generated.swift  XCTestManifests.swift
Tests/TOMLDecoderTests/Support/: TOMLComplianceSupport.swift  Tags.Generated.swift
Tests/TOMLDecoderTests/gyb/: LeafValueDecodingTests.swift.gyb
Tests/TOMLDecoderTests/valid_fixtures/: bool.json  comments-everywhere.json  escaped-escape.json  implicit-groups.json  key-equals-nospace.json  key-numeric.json  key-special-chars.json  local-date.json  local-datetime.json  multiline-string.json  raw-string.json  string-multiline-escaped-crlf.json  table-array-one.json  table-sub-empty.json  table-whitespace.json  table-with-pound.json
Tests/TOMLDecoderTests/valid_fixtures_/: arrays-hetergeneous.json  datetime-timezone.json  double-quote-escape.json  example.json  float-exponent.json  infinity-and-nan.json  inline-table.json  (+8 more)
Tests/TOMLDeserializerTests/: NewParserTests.swift  TOMLDeserializerTests.swift  TOMLInvalidationTests.swift
data/documentation/: argumentparser.json  argumentparsertoolinfo.json  benchmarkboilerplategenerator.json  developingtomldecoder.json  systempackage.json  tomldecoder.json
index/: availability.index  data.mdb  index.json  navigator.index
main/: metadata.json
main/index/: index.json
(+1671 files in other folders)
