load("@rules_swift//swift:swift.bzl", "swift_binary", "swift_library", "swift_test")
load("@bazel_skylib//rules:copy_directory.bzl", "copy_directory")
load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_swift//swift:swift_interop_hint.bzl", "swift_interop_hint")

swift_binary(
    name = "compliance",
    srcs = ["Sources/compliance/main.swift"],
    deps = [
        ":TOMLDecoder",
    ],
    visibility = ["//visibility:public"],
)

swift_library(
    name = "TOMLDecoder",
    module_name = "TOMLDecoder",
    srcs = glob(["Sources/TOMLDecoder/**/*.swift"]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "ProlepticGregorianTestHelpers",
    srcs = ["Sources/ProlepticGregorianTestHelpers/DateRef.cpp"],
    hdrs = [
        "Sources/ProlepticGregorianTestHelpers/include/DateRef.h",
        "Sources/ProlepticGregorianTestHelpers/include/module.modulemap",
    ],
    includes = ["Sources/ProlepticGregorianTestHelpers/include"],
    copts = ["-std=c++20"],
    aspect_hints = [":ProlepticGregorianTestHelpers_swift_interop"],
    visibility = ["//visibility:public"],
)

swift_interop_hint(
    name = "ProlepticGregorianTestHelpers_swift_interop",
    module_name = "ProlepticGregorianTestHelpers",
)

swift_test(
    name = "TOMLDecoderTests",
    srcs = glob(["Tests/TOMLDecoderTests/**/*.swift"]),
    deps = [
        ":TOMLDecoder",
        ":ProlepticGregorianTestHelpers",
    ],
    data = [
        ":invalid_fixtures",
        ":valid_fixtures",
    ],
    visibility = ["//visibility:private"],
)

copy_directory(
    name = "valid_fixtures",
    src = "Tests/TOMLDecoderTests/valid_fixtures",
    out = "Tests/TOMLDecoderTests/valid_fixtures",
    visibility = ["//visibility:private"],
)

copy_directory(
    name = "invalid_fixtures",
    src = "Tests/TOMLDecoderTests/invalid_fixtures",
    out = "Tests/TOMLDecoderTests/invalid_fixtures",
    visibility = ["//visibility:private"],
)
