load("@rules_swift//swift:swift.bzl", "swift_binary", "swift_library", "swift_test")
load("@rules_cc//cc:defs.bzl", "cc_library")

swift_binary(
    name = "compliance",
    srcs = ["Sources/compliance/main.swift"],
    deps = [
        ":TOMLDecoder",
    ],
    visibility = ["//visibility:public"],
)

swift_library(
    name = "Resources",
    module_name = "Resources",
    srcs = glob(["Sources/Resources/**/*.swift"]),
    data = [":resources_fixtures"],
)

swift_library(
    name = "TOMLDecoder",
    module_name = "TOMLDecoder",
    srcs = glob(["Sources/TOMLDecoder/**/*.swift"]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "ProlepticGregorianTestHelpers",
    srcs = ["Sources/ProlepticGregorianTestHelpers/DateRef.cpp"],
    hdrs = [
        "Sources/ProlepticGregorianTestHelpers/include/DateRef.h",
        "Sources/ProlepticGregorianTestHelpers/include/module.modulemap",
    ],
    includes = ["Sources/ProlepticGregorianTestHelpers/include"],
    copts = ["-std=c++20"],
    visibility = ["//visibility:public"],
)

swift_test(
    name = "TOMLDecoderTests",
    srcs = glob(["Tests/TOMLDecoderTests/**/*.swift"]),
    deps = [
        ":Resources",
        ":TOMLDecoder",
        ":ProlepticGregorianTestHelpers",
    ],
    data = [
        ":invalid_fixtures",
        ":valid_fixtures",
    ],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "resources_fixtures",
    srcs = glob(["Sources/Resources/fixtures/**/*"]),
    visibility = ["//visibility:private"],
)

filegroup(
    name = "valid_fixtures",
    srcs = glob(["Tests/TOMLDecoderTests/valid_fixtures/**/*"]),
    visibility = ["//visibility:private"],
)

filegroup(
    name = "invalid_fixtures",
    srcs = glob(["Tests/TOMLDecoderTests/invalid_fixtures/**/*"]),
    visibility = ["//visibility:private"],
)
