module(
    name = "swift-tomldecoder",
    version = "0.3.1",
    compatibility_level = 0,
)

bazel_dep(name = "apple_support", version = "1.15.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_swift", version = "1.18.0", max_compatibility_level = 2, repo_name = "build_bazel_rules_swift")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
