module(
    name = "swift-tomldecoder",
    version = "0.3.1",
    compatibility_level = 0,
)

bazel_dep(name = "apple_support", version = "1.24.5")
bazel_dep(name = "rules_swift", version = "3.3.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_cc", version = "0.2.14")
